RELEASE NOTES 


0.3.6
---------------------------
Updates
- Added Doctests with a dummy dataframe source
- Added test results

0.3.5
---------------------------
Bug fixes
- made method infer_gps private (_infer_gps)

Updates
- Updated docs to include Python code sample



0.3.4
---------------------------
Bug fixes
- aco_graank returns DataGP object

Updates
- made get_attr_cols, get_time_cols private
- made construct_matrices, estimate_score_vector, estimate_support private
- renamed init_bitmap method to fit_bitmap
- renamed CluDataGP to ClusterGP
- added discover method to ClusterGP
- converted graank method to class
- converted aco_graank method to class
- converted ga_graank method to class
- converted pso_graank method to class
- converted rs_graank method to class
- converted hc_graank method to class
- updated usage documentation


0.3.3
---------------------------
Bug fixes
- renamed CluDataGP attribute from all to no_prob
- renamed variables in gen_apriori_candidates
- corrected typos in docs

Updates
- added attribute gradual_patterns to DataGP class
- modified graank, acograd, psograd, gagrad, lsgrad, prgrad, clugrad to return DataGP object
- renamed acogps to aco_graank
- renamed gagps to ga_graank
- renamed psogps to pso_graank
- renamed hcgps to hc_graank
- renamed rsgps to rs_graank
- renamed clugps to clu_bfs


0.3.2
---------------------------
Updates
- renamed method compare_gps to analyze_gps
- analyze_gps computes error, std, and returns tabulated results
- added docs
- added class DfsDataGP
- added method inv_gi


0.3.1
---------------------------
Bug fixes
- option to fetch all matrices


0.3.0
---------------------------
Updates
- added method construct_all_matrices


0.2.9
---------------------------
Updates
- added method add_items_from_list()

Bug fixes
- generate all object pairs when e_prob is 0


0.2.8
---------------------------
Updates
- added attribute freq_count to class ExtGP


0.2.7
---------------------------
Updates