@@ -572,9 +572,9 @@ jQuery.cookie = function(name, value, options) {
     <body>
         <div id="container">
             <div id="header">
-                <div class="time" xmlns="">0 ms</div>
+                <div class="time" xmlns="">1 ms</div>
                 <h1>
-                    Doctests in so4gp: <strong><span class="total" xmlns="http://www.w3.org/1999/xhtml">127 total, </span><span class="passed">127 passed</span></strong>
+                    Doctests in so4gp: <strong><span class="total" xmlns="http://www.w3.org/1999/xhtml">141 total, </span><span class="passed">141 passed</span></strong>
                 </h1>
                 <div id="treecontrol">
                     <ul>
@@ -874,6 +874,174 @@ jQuery.cookie = function(name, value, options) {
                                 <span><em class="time">
                                         <div class="time">0 ms</div>
                                     </em><em class="status">passed</em>so4gp.ClusterGP.__init__result_json = mine_obj.discover()
+</span>
+                                <ul>
+                                    <li class="text">
+                                        <span class="stdout"></span>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="level top open">
+                        <span><em class="time">
+                                <div class="time">0 ms</div>
+                            </em>so4gp.DataGP</span>
+                        <ul>
+                            <li class="level test">
+                                <span><em class="time">
+                                        <div class="time">0 ms</div>
+                                    </em><em class="status">passed</em>so4gp.DataGPimport so4gp as sgp
+</span>
+                                <ul>
+                                    <li class="text">
+                                        <span class="stdout"></span>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="level test">
+                                <span><em class="time">
+                                        <div class="time">0 ms</div>
+                                    </em><em class="status">passed</em>so4gp.DataGPimport pandas
+</span>
+                                <ul>
+                                    <li class="text">
+                                        <span class="stdout"></span>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="level test">
+                                <span><em class="time">
+                                        <div class="time">0 ms</div>
+                                    </em><em class="status">passed</em>so4gp.DataGPdummy_data = [[30, 3, 1, 10], [35, 2, 2, 8], [40, 4, 2, 7], [50, 1, 1, 6], [52, 7, 1, 2]]
+</span>
+                                <ul>
+                                    <li class="text">
+                                        <span class="stdout"></span>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="level test">
+                                <span><em class="time">
+                                        <div class="time">0 ms</div>
+                                    </em><em class="status">passed</em>so4gp.DataGPcolumns = ['Age', 'Salary', 'Cars', 'Expenses']
+</span>
+                                <ul>
+                                    <li class="text">
+                                        <span class="stdout"></span>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="level test">
+                                <span><em class="time">
+                                        <div class="time">0 ms</div>
+                                    </em><em class="status">passed</em>so4gp.DataGPdummy_df = pandas.DataFrame(dummy_data, columns=['Age', 'Salary', 'Cars', 'Expenses'])
+</span>
+                                <ul>
+                                    <li class="text">
+                                        <span class="stdout"></span>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="level test">
+                                <span><em class="time">
+                                        <div class="time">0 ms</div>
+                                    </em><em class="status">passed</em>so4gp.DataGPdata_gp = sgp.DataGP(data_source=dummy_df, min_sup=0.5)
+</span>
+                                <ul>
+                                    <li class="text">
+                                        <span class="stdout"></span>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="level test">
+                                <span><em class="time">
+                                        <div class="time">0 ms</div>
+                                    </em><em class="status">passed</em>so4gp.DataGPdata_gp.fit_bitmap()
+</span>
+                                <ul>
+                                    <li class="text">
+                                        <span class="stdout"></span>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="level top open">
+                        <span><em class="time">
+                                <div class="time">0 ms</div>
+                            </em>so4gp.DataGP.__init__</span>
+                        <ul>
+                            <li class="level test">
+                                <span><em class="time">
+                                        <div class="time">0 ms</div>
+                                    </em><em class="status">passed</em>so4gp.DataGP.__init__import so4gp as sgp
+</span>
+                                <ul>
+                                    <li class="text">
+                                        <span class="stdout"></span>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="level test">
+                                <span><em class="time">
+                                        <div class="time">0 ms</div>
+                                    </em><em class="status">passed</em>so4gp.DataGP.__init__import pandas
+</span>
+                                <ul>
+                                    <li class="text">
+                                        <span class="stdout"></span>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="level test">
+                                <span><em class="time">
+                                        <div class="time">0 ms</div>
+                                    </em><em class="status">passed</em>so4gp.DataGP.__init__dummy_data = [[30, 3, 1, 10], [35, 2, 2, 8], [40, 4, 2, 7], [50, 1, 1, 6], [52, 7, 1, 2]]
+</span>
+                                <ul>
+                                    <li class="text">
+                                        <span class="stdout"></span>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="level test">
+                                <span><em class="time">
+                                        <div class="time">0 ms</div>
+                                    </em><em class="status">passed</em>so4gp.DataGP.__init__columns = ['Age', 'Salary', 'Cars', 'Expenses']
+</span>
+                                <ul>
+                                    <li class="text">
+                                        <span class="stdout"></span>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="level test">
+                                <span><em class="time">
+                                        <div class="time">0 ms</div>
+                                    </em><em class="status">passed</em>so4gp.DataGP.__init__dummy_df = pandas.DataFrame(dummy_data, columns=['Age', 'Salary', 'Cars', 'Expenses'])
+</span>
+                                <ul>
+                                    <li class="text">
+                                        <span class="stdout"></span>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="level test">
+                                <span><em class="time">
+                                        <div class="time">0 ms</div>
+                                    </em><em class="status">passed</em>so4gp.DataGP.__init__data_gp = sgp.DataGP(data_source=dummy_df, min_sup=0.5)
+</span>
+                                <ul>
+                                    <li class="text">
+                                        <span class="stdout"></span>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="level test">
+                                <span><em class="time">
+                                        <div class="time">0 ms</div>
+                                    </em><em class="status">passed</em>so4gp.DataGP.__init__data_gp.fit_bitmap()
 </span>
                                 <ul>
                                     <li class="text">
@@ -1589,7 +1757,7 @@ jQuery.cookie = function(name, value, options) {
                     </li>
                     <li class="level top open">
                         <span><em class="time">
-                                <div class="time">0 ms</div>
+                                <div class="time">1 ms</div>
                             </em>so4gp.HillClimbingGRAANK.__init__</span>
                         <ul>
                             <li class="level test">
@@ -1627,7 +1795,7 @@ jQuery.cookie = function(name, value, options) {
                             </li>
                             <li class="level test">
                                 <span><em class="time">
-                                        <div class="time">0 ms</div>
+                                        <div class="time">1 ms</div>
                                     </em><em class="status">passed</em>so4gp.HillClimbingGRAANK.__init__dummy_df = pandas.DataFrame(dummy_data, columns=['Age', 'Salary', 'Cars', 'Expenses'])
 </span>
                                 <ul>
@@ -2139,7 +2307,7 @@ jQuery.cookie = function(name, value, options) {
             </div>
         </div>
         <div id="footer">
-            <p>Generated by PyCharm on 10/19/22, 11:52 AM</p>
+            <p>Generated by PyCharm on 10/19/22, 2:59 PM</p>
         </div>
     </body>
 </html>
