@@ -47,6 +47,7 @@ import os
 import pandas as pd
 import random
 import statistics
+
 from tabulate import tabulate
 from ypstruct import structure
 from sklearn.cluster import KMeans
@@ -88,6 +89,7 @@ SCORE_VECTOR_ITERATIONS = 10  # maximum iteration for score vector estimation
 
 
 class DataGP:
+    # noinspection PyTypeChecker
     """Description of class DataGP
 
     A class for creating data-gp objects. A data-gp object is meant to store all the parameters required by GP
@@ -131,7 +133,9 @@ class DataGP:
 
         get_gi_bitmap: computes and returns the bitmap matrix corresponding to a GI
 
-        init_attributes: generates all the bitmap matrices of valid GIs
+        fit_bitmap: generates all the bitmap matrices of valid GIs
+
+        fit_tids: generates all the transaction ids of valid GIs
 
         read (static): reads contents of a CSV file or data-frame
 
@@ -139,9 +143,20 @@ class DataGP:
 
         clean_data (static): cleans data (missing values, outliers) before extraction of GPs.
 
+    >>> import so4gp as sgp
+    >>> import pandas
+    >>> dummy_data = [[30, 3, 1, 10], [35, 2, 2, 8], [40, 4, 2, 7], [50, 1, 1, 6], [52, 7, 1, 2]]
+    >>> columns = ['Age', 'Salary', 'Cars', 'Expenses']
+    >>> dummy_df = pandas.DataFrame(dummy_data, columns=['Age', 'Salary', 'Cars', 'Expenses'])
+    >>>
+    >>> data_gp = sgp.DataGP(data_source=dummy_df, min_sup=0.5)
+    >>> data_gp.fit_bitmap()
+
+
     """
 
     def __init__(self, data_source, min_sup=MIN_SUPPORT, eq=False):
+        # noinspection PyTypeChecker
         """Description of class DataGP
 
 
@@ -175,6 +190,16 @@ class DataGP:
 
             gradual_patterns: list of GP objects
 
+        >>> import so4gp as sgp
+        >>> import pandas
+        >>> dummy_data = [[30, 3, 1, 10], [35, 2, 2, 8], [40, 4, 2, 7], [50, 1, 1, 6], [52, 7, 1, 2]]
+        >>> columns = ['Age', 'Salary', 'Cars', 'Expenses']
+        >>> dummy_df = pandas.DataFrame(dummy_data, columns=['Age', 'Salary', 'Cars', 'Expenses'])
+        >>>
+        >>> data_gp = sgp.DataGP(data_source=dummy_df, min_sup=0.5)
+        >>> data_gp.fit_bitmap()
+
+
         :param data_source: [required] a data source, it can either be a 'file in csv format' or a 'Pandas DataFrame'
 
         :type data_source: (str, pd.DataFrame)
@@ -195,6 +220,7 @@ class DataGP:
         self.time_cols = self._get_time_cols()
         self.attr_cols = self._get_attr_cols()
         self.valid_bins = np.array([])
+        self.valid_tids = defaultdict(set)
         self.no_bins = False
         self.step_name = ''  # For T-GRAANK
         self.attr_size = 0  # For T-GRAANK
@@ -254,8 +280,8 @@ class DataGP:
     def fit_bitmap(self, attr_data=None):
         """Description
 
-        Generates bitmaps for columns with numeric objects. It only stores (attribute valid_bins) those bitmaps whose
-        computed support values are greater or equal to the minimum support threshold value.
+        Generates bitmaps for columns with numeric objects. It stores the bitmaps in attribute valid_bins (those bitmaps
+        whose computed support values are greater or equal to the minimum support threshold value).
 
         :param attr_data: stepped attribute objects
         :type attr_data: np.ndarray
@@ -281,9 +307,9 @@ class DataGP:
             # 2a. Generate 1-itemset gradual items
             with np.errstate(invalid='ignore'):
                 if not self.equal:
-                    temp_pos = col_data < col_data[:, np.newaxis]
+                    temp_pos = col_data > col_data[:, np.newaxis]
                 else:
-                    temp_pos = col_data <= col_data[:, np.newaxis]
+                    temp_pos = col_data >= col_data[:, np.newaxis]
                     np.fill_diagonal(temp_pos, 0)
 
                 # 2b. Check support of each generated itemset
@@ -296,6 +322,27 @@ class DataGP:
         if len(self.valid_bins) < 3:
             self.no_bins = True
         gc.collect()
+
+    def fit_tids(self):
+        """Description
+
+        Generates transaction ids (tids) for each column/feature with numeric objects. It stores the tids in attribute
+        valid_tids (those tids whose computed support values are greater or equal to the minimum support threshold
+        value).
+
+        :return: void
+        """
+        self.fit_bitmap()
+        n = self.row_count
+        for bin_obj in self.valid_bins:
+            arr_ij = np.transpose(np.nonzero(bin_obj[1]))
+            set_ij = {tuple(ij) for ij in arr_ij if ij[0] < ij[1]}
+            int_gi = int(bin_obj[0][0]+1) if (bin_obj[0][1].decode() == '+') else (-1 * int(bin_obj[0][0]+1))
+            tids_len = len(set_ij)
+
+            supp = float((tids_len*0.5) * (tids_len - 1)) / float(n * (n - 1.0) / 2.0)
+            if supp >= self.thd_supp:
+                self.valid_tids[int_gi] = set_ij
 
     @staticmethod
     def read(data_src):
@@ -434,118 +481,6 @@ class DataGP:
         return titles, df.values
 
 
-class DfsDataGP:
-
-    def __init__(self, file_path, min_sup=0.0):
-        self.thd_supp = min_sup
-        self.titles, self.data = DataGP.read(file_path)
-        self.row_count, self.col_count = self.data.shape
-        self.time_cols = self.get_time_cols()
-        self.attr_cols = self.get_attr_cols()
-        self.cost_matrix = np.ones((self.col_count, 3), dtype=int)
-        self.min_len = self.thd_supp * self.row_count
-        self.item_to_tids = defaultdict(set)
-        self.gradual_patterns = None
-        # self.encoded_data = np.array([])
-
-    def get_attr_cols(self):
-        """
-        Returns indices of all columns with non-datetime objects
-
-        :return: ndarray
-        """
-        all_cols = np.arange(self.col_count)
-        attr_cols = np.setdiff1d(all_cols, self.time_cols)
-        return attr_cols
-
-    def get_time_cols(self):
-        """
-        Tests each column's objects for date-time values. Returns indices of all columns with date-time objects
-
-        :return: ndarray
-        """
-        # Retrieve first column only
-        time_cols = list()
-        n = self.col_count
-        for i in range(n):  # check every column/attribute for time format
-            row_data = str(self.data[0][i])
-            try:
-                time_ok, t_stamp = DataGP.test_time(row_data)
-                if time_ok:
-                    time_cols.append(i)
-            except ValueError:
-                continue
-        return np.array(time_cols)
-
-    def encode_data(self):
-        attr_data = self.data.T
-        # self.attr_size = len(attr_data[self.attr_cols[0]])
-        size = self.row_count  # self.attr_size
-        n = len(self.attr_cols) + 2
-        encoded_data = list()
-        for i in range(size):
-            j = i + 1
-            if j >= size:
-                continue
-
-            temp_arr = np.empty([n, (size - j)], dtype=int)
-            temp_arr[0] = np.repeat(i, (size - j))
-            temp_arr[1] = np.arange(j, size)
-            k = 2
-            for col in self.attr_cols:
-                row_in = attr_data[col][i]
-                row_js = attr_data[col][(i+1):size]
-                v = col + 1
-                row = np.where(row_js > row_in, v, np.where(row_js < row_in, -v, 0))
-                temp_arr[k] = row
-                k += 1
-                pos_cost = np.count_nonzero(row == v)
-                neg_cost = np.count_nonzero(row == -v)
-                inv_cost = np.count_nonzero(row == 0)
-                self.cost_matrix[col][0] += (neg_cost + inv_cost)
-                self.cost_matrix[col][1] += (pos_cost + inv_cost)
-                self.cost_matrix[col][2] += (pos_cost + neg_cost)
-            temp_arr = temp_arr.T
-            encoded_data.extend(temp_arr)
-        self.data = None
-        gc.collect()
-        return np.array(encoded_data)
-
-    def remove_inv_attrs(self, encoded_data):
-        c_matrix = self.cost_matrix
-        # 1. remove invalid attributes
-        valid_a1 = list()
-        valid_a2 = [-2, -1]
-        for i in range(len(self.attr_cols)):
-            a = self.attr_cols[i]
-            valid = (c_matrix[a][0] < c_matrix[a][2]) or \
-                    (c_matrix[a][1] < c_matrix[a][2])
-            if valid:
-                valid_a1.append(i)
-                valid_a2.append(i)
-        self.attr_cols = self.attr_cols[valid_a1]
-        valid_a2 = np.array(valid_a2) + 2
-        encoded_data = encoded_data[:, valid_a2]
-        return encoded_data
-
-    def init_transaction_ids(self):
-
-        encoded_data = self.remove_inv_attrs(self.encode_data())
-
-        # 1. group similar items
-        for t in range(len(encoded_data)):
-            transaction = encoded_data[t][2:]
-            for item in transaction:
-                self.item_to_tids[item].add(tuple(encoded_data[t][:2]))
-
-        low_supp_items = [k for k, v in self.item_to_tids.items()
-                          if len(np.unique(np.array(list(v))[:, 0], axis=0))
-                          < self.min_len]
-        for item in low_supp_items:
-            del self.item_to_tids[item]
-        gc.collect()
-
-
 # -------- OTHER METHODS -----------
 
 def analyze_gps(data_src, min_sup, est_gps, approach='bfs'):
@@ -591,8 +526,8 @@ def analyze_gps(data_src, min_sup, est_gps, approach='bfs'):
     :return: tabulated results
     """
     if approach == 'dfs':
-        d_set = DfsDataGP(data_src, min_sup)
-        d_set.init_transaction_ids()
+        d_set = DataGP(data_src, min_sup)
+        d_set.fit_tids()
     else:
         d_set = DataGP(data_src, min_sup)
         d_set.fit_bitmap()
@@ -1219,7 +1154,7 @@ class ExtGP(GP):
             node = int(gi_int[0] + 1) * gi_int[1]
             gi_int = (gi.inv_gi()).as_integer()
             node_inv = int(gi_int[0] + 1) * gi_int[1]
-            for k, v in d_set.item_to_tids.items():
+            for k, v in d_set.valid_tids.items():
                 if node == k:
                     if temp_tids is None:
                         temp_tids = v
