@@ -3,9 +3,13 @@ RELEASE NOTES
 
 0.3.6
 ---------------------------
+Bug fixes
+- fixed fit_bitmap method to show non-transposed bitmaps
+
 Updates
 - Added Doctests with a dummy dataframe source
 - Added test results
+- Added method fit_tids in class DataGP
 
 0.3.5
 ---------------------------
